infrastructure/external-services/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-external
  namespace: default # 앱이 배포될 네임스페이스
  annotations:
    ignore-check.kube-linter.io/dangling-service: "External service"
spec:
  ports:
    - name: write
      port: 15432
      targetPort: 15432
      protocol: TCP
    - name: read
      port: 15433
      targetPort: 15433
      protocol: TCP
  clusterIP: None # Headless Service
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres-external
  namespace: default
subsets:
  - addresses:
      - ip: 172.19.0.56 # Docker HAProxy IP
    ports:
      - name: write
        port: 15432
      - name: read
        port: 15433
